@@ -9,6 +9,8 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
+
 @Service
 public class UserWalletServiceImpl implements UserWalletService{
 
@@ -38,7 +40,7 @@ public class UserWalletServiceImpl implements UserWalletService{
     @Override
     public List<UserWalletDto> findAllWallets() {
         return userWalletRepository.findAll().stream().map(this::convertEntityToDTO)
-                .toList();
+                .collect(Collectors.toList());
 
     }
 
