@@ -10,6 +10,7 @@ import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.test.context.junit4.SpringRunner;
 
 import java.util.Optional;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -29,7 +30,9 @@ public class UserWalletServiceTest {
     public void getUserWallets(){
         when(userWalletRepository.findAll())
                 .thenReturn(Stream.of(new UserWallet())
-                        .toList());
+                        .collect(Collectors.toList()));
+        assertEquals(1, userWalletService.findAllWallets().size());
+
     }
 
     @Test
